--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "js-cookie": "^3.0.5",
         "jspdf": "^3.0.3",
         "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.552.0",
