--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "js-cookie": "^3.0.5",
         "jspdf": "^3.0.3",
         "jspdf-autotable": "^5.0.2",
@@ -36,6 +37,7 @@
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "react-hook-form": "^7.66.0",
+        "recharts": "^3.5.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "use-debounce": "^10.0.6",
