--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "zustand": "^5.0.8"
     },
     "devDependencies": {
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
